--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                                <div class="intro-heading">Cinema com até 70% Off</div>
+                                <div class="intro-heading">Cinema com até 70% OFF</div>
   <div class="intro-lead-in">Ingressos com desconto nos cinemas em todo o Brasil</div>
                 <a href="#services" class="page-scroll btn btn-xl">Me fala mais</a>
             </div>
